--- a/Newbie/SocialProofSection/style.css
+++ b/Newbie/SocialProofSection/style.css
@@ -30,3 +30,99 @@ html {
 	font-size: var(--font-size);
 	font-family: var(--font-family);
 }
+
+body {
+	background-image: url(/images/bg-pattern-top-mobile.svg),
+		url(/images/bg-pattern-bottom-mobile.svg);
+	background-position: top left, bottom right;
+	background-repeat: no-repeat;
+}
+
+main {
+	padding: 2rem;
+}
+
+.banner {
+	text-align: center;
+}
+
+.banner__header {
+	font-size: 2rem;
+	font-weight: var(--font-weight-bold);
+	color: var(--very-dark-magenta);
+	padding: 1rem 2rem;
+}
+
+.banner__text {
+	color: var(--dark-grayish-magenta);
+	font-weight: var(--font-weight-medium);
+	line-height: 1.3rem;
+}
+
+.ratings {
+	margin: 2rem 0 3rem 0;
+}
+
+.rating {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100%;
+	padding: 1rem;
+	background-color: var(--light-grayish-magenta);
+	border-radius: 0.5rem;
+	margin-top: 1rem;
+}
+.rating__stars > img {
+	margin: 0 0.2rem;
+}
+.rating__text {
+	margin-top: 0.5rem;
+	font-weight: var(--font-weight-bold);
+	color: var(--very-dark-magenta);
+}
+
+.review {
+	background-color: var(--very-dark-magenta);
+	border-radius: 0.5rem;
+	padding: 2rem;
+	margin-bottom: 1.3rem;
+}
+
+.review__header {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	margin-bottom: 1.6rem;
+}
+
+.review__header__image {
+	border-radius: 50%;
+	width: 2.6rem;
+	height: auto;
+}
+
+.review__reviewer {
+	margin-left: 1.3rem;
+}
+
+.review__reviewer__name,
+.review__reviewer__status {
+	font-size: 1rem;
+	font-weight: var(--font-weight-bold);
+}
+
+.review__reviewer__name {
+	color: var(--light-grayish-magenta);
+}
+
+.review__reviewer__status {
+	color: var(--soft-pink);
+	margin-top: 0.2rem;
+}
+
+.review__text {
+	color: var(--light-grayish-magenta);
+	line-height: 1.4rem;
+}
