--- a/Newbie/SocialProofSection/style.css
+++ b/Newbie/SocialProofSection/style.css
@@ -36,10 +36,16 @@ body {
 		url(/images/bg-pattern-bottom-mobile.svg);
 	background-position: top left, bottom right;
 	background-repeat: no-repeat;
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 
 main {
 	padding: 2rem;
+	display: grid;
 }
 
 .banner {
@@ -57,6 +63,7 @@ main {
 	color: var(--dark-grayish-magenta);
 	font-weight: var(--font-weight-medium);
 	line-height: 1.3rem;
+	padding: 0 1rem;
 }
 
 .ratings {
@@ -82,12 +89,20 @@ main {
 	font-weight: var(--font-weight-bold);
 	color: var(--very-dark-magenta);
 }
+.reviews {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+	height: auto;
+}
 
 .review {
 	background-color: var(--very-dark-magenta);
 	border-radius: 0.5rem;
 	padding: 2rem;
-	margin-bottom: 1.3rem;
+	width: 100%;
 }
 
 .review__header {
@@ -125,4 +140,64 @@ main {
 .review__text {
 	color: var(--light-grayish-magenta);
 	line-height: 1.4rem;
+}
+
+@media only screen and (min-width: 1080px) {
+	body {
+		background-image: url(/images/bg-pattern-top-desktop.svg),
+			url(/images/bg-pattern-bottom-desktop.svg);
+	}
+	.container {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.banner {
+		text-align: left;
+	}
+
+	.banner__header {
+		padding: 0;
+		max-width: 350px;
+		font-size: 3.3rem;
+	}
+	.banner__text {
+		max-width: 370px;
+		margin-top: 1rem;
+		padding: 0;
+	}
+
+	.rating {
+		flex-direction: row;
+		padding: 1rem 2rem;
+		gap: 2rem;
+		max-width: 420px;
+	}
+	.rating:nth-of-type(2) {
+		margin-left: 2rem;
+	}
+	.rating:nth-of-type(3) {
+		margin-left: 4rem;
+	}
+
+	.rating__text {
+		text-align: left;
+		margin-right: auto;
+	}
+
+	.reviews {
+		flex-direction: row;
+	}
+
+	.review {
+		width: 320px;
+	}
+
+	.review:nth-of-type(2) {
+		margin-top: 2rem;
+	}
+	.review:nth-of-type(3) {
+		margin-top: 4rem;
+	}
 }
