--- a/Junior/NewsletterSignUpWithSuccessMessage/style.css
+++ b/Junior/NewsletterSignUpWithSuccessMessage/style.css
@@ -14,6 +14,8 @@
 :root {
 	/* Colors */
 	--tomato: hsl(4, 100%, 67%);
+	--tomato-light: hsla(4, 100%, 67%, 0.3);
+
 	--dark-slate-grey: hsl(234, 29%, 20%);
 	--charcoal-grey: hsl(235, 18%, 26%);
 	--grey: hsl(231, 7%, 60%);
@@ -33,76 +35,104 @@
 }
 
 body {
-	background-color: var(--white);
-	min-height: 100vh;
 	font-family: var(--font-family);
-	color: var(--dark-slate-grey);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
-
 .hidden {
 	display: none;
 }
-
-.container__form {
-	background-color: var(--white);
-	width: 100%;
+main {
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	flex-direction: column;
 }
 
-.container__form > article {
+.banner__image--success {
+	padding-left: 1rem;
+}
+.content {
 	padding: 1rem;
 }
-.illustration {
-	width: 100%;
+.content--success {
+	display: grid;
+	grid-template-rows: 1fr 1fr;
 }
-
-.header {
-	font-size: 2.6rem;
-
+.content__header__title {
+	font-size: 2.7rem;
+	font-weight: var(--font-weight-bold);
+	color: var(--dark-slate-grey);
 	padding: 1rem 0;
 }
-
-.text {
-	font-size: 1rem;
-	font-weight: var(--font-weight-regular);
+.content__header__text {
 	line-height: 1.5rem;
+	color: var(--dark-slate-grey);
 }
-
-.list {
-}
-.list__item {
+.content__list {
 	list-style: none;
-	margin: 1rem 0;
-	display: flex;
-	align-items: flex-start;
-	line-height: 1.5rem;
+	padding: 1rem 0;
 }
-.list__item > img {
+.content__list__item {
+	display: flex;
+	margin: 0.7rem 0;
+}
+.content__list__item::before {
+	content: url(/assets/images/icon-list.svg);
 	margin-right: 1rem;
 }
-
-.form {
-	padding: 1rem 0;
-}
-.form > label {
-	display: block;
-	font-size: 0.8rem;
+.content__form__label {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-size: 0.7rem;
 	font-weight: var(--font-weight-bold);
 }
-
-.form__email {
-	border: 1px solid var(--grey);
-	border-radius: 0.5rem;
-	width: 100%;
-	padding: 1rem;
-	margin: 0.4rem 0 1rem 0;
+.content__form__label > span:nth-child(1) {
+	color: var(--dark-slate-grey);
+}
+.content__form__label > span:nth-child(2) {
+	color: var(--tomato);
 }
 
-.button {
+.content__form__input {
+	padding: 1rem;
+	border: 1px solid var(--grey);
+	border-radius: 0.4rem;
+	margin-top: 0.7rem;
+	margin-bottom: 1rem;
 	width: 100%;
+	opacity: 0.7;
+	color: var(--dark-slate-grey);
+	font-weight: var(--font-weight-bold);
+}
+.input--error {
+	color: var(--tomato);
+	border-color: var(--tomato);
+	background-color: var(--tomato-light);
+	opacity: 1;
+}
+.content__form__input:focus {
+	border-color: 1px solid var(--dark-slate-grey);
+	outline: none;
+	opacity: 1;
+}
+.content__button {
 	padding: 1rem;
 	border: none;
-	background-color: var(--dark-slate-grey);
-	color: var(--white);
 	font-weight: var(--font-weight-bold);
+	color: var(--white);
+	background: var(--dark-slate-grey);
 	border-radius: 0.5rem;
+	width: 100%;
+}
+.content__button:hover {
+	color: var(--white);
+}
+
+.content__success__button {
+	align-self: end;
 }
