--- a/Junior/NewsletterSignUpWithSuccessMessage/style.css
+++ b/Junior/NewsletterSignUpWithSuccessMessage/style.css
@@ -42,7 +42,7 @@ body {
 	flex-direction: column;
 }
 .hidden {
-	display: none;
+	display: none !important;
 }
 main {
 }
@@ -160,5 +160,41 @@ main .container:nth-of-type(2) {
 	margin: auto;
 }
 
-@media only screen and (width: 800px) {
+@media only screen and (min-width: 800px) {
+	body {
+		min-height: 100vh;
+		background-color: var(--charcoal-grey);
+	}
+	main {
+		height: auto;
+	}
+	.container {
+		background-color: var(--white);
+		border-radius: 1rem;
+	}
+	.container:first-of-type {
+		padding: 1rem;
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.container:nth-of-type(2) {
+		padding: 2rem;
+	}
+	.banner {
+		max-width: 400px;
+	}
+	.content {
+		max-width: 400px;
+	}
+	.banner__image--form {
+		content: url(/assets/images/illustration-sign-up-desktop.svg);
+		height: auto;
+	}
+	.content__success__button {
+		position: static;
+		width: 100%;
+		margin-top: 2rem;
+	}
 }
