--- a/Junior/AgeCalculatorApp/style.css
+++ b/Junior/AgeCalculatorApp/style.css
@@ -42,12 +42,13 @@ main {
 	border-radius: 1rem 1rem 3rem 1rem;
 	padding: 2rem 1rem;
 	width: 100%;
+	max-width: 600px;
 }
 
 .form {
 	display: grid;
 	grid-template-columns: repeat(3, minmax(0, 1fr));
-
+	max-width: 80%;
 	gap: 1rem;
 }
 .form-group {
@@ -106,4 +107,16 @@ main {
 
 .result > span {
 	color: var(--purple);
+}
+
+@media only screen and (min-width: 800px) {
+	main {
+		padding: 2rem;
+	}
+	.divider {
+		margin: 2rem 0;
+	}
+	.divider > button {
+		margin-right: 0;
+	}
 }
