--- a/Junior/AgeCalculatorApp/style.css
+++ b/Junior/AgeCalculatorApp/style.css
@@ -54,6 +54,7 @@ main {
 .form-group {
 	display: flex;
 	flex-direction: column;
+	position: relative;
 }
 
 .form-group > label {
@@ -69,7 +70,7 @@ main {
 	padding: 0.7rem;
 	border-radius: 0.5rem;
 	outline: none;
-	border: 2px solid var(--off-white);
+	border: 1px solid var(--off-white);
 	font-weight: var(--font-weight-extrabold);
 	font-size: 1rem;
 	color: var(--off-black);
@@ -77,7 +78,21 @@ main {
 .form-group > input:focus {
 	border-color: var(--purple);
 }
+.error > .form-group > input {
+	border-color: var(--light-red);
+}
+.error > .form-group > label {
+	color: var(--light-red);
+}
 
+.error--text {
+	position: absolute;
+	color: var(--light-red);
+	bottom: -1.4rem;
+	left: 3px;
+	font-size: 0.7rem;
+	font-style: italic;
+}
 .divider {
 	width: 100%;
 	height: 2px;
