--- a/Junior/AgeCalculatorApp/style.css
+++ b/Junior/AgeCalculatorApp/style.css
@@ -48,13 +48,11 @@ main {
 .form {
 	display: grid;
 	grid-template-columns: repeat(3, minmax(0, 1fr));
-	max-width: 80%;
 	gap: 1rem;
 }
 .form-group {
 	display: flex;
 	flex-direction: column;
-	position: relative;
 }
 
 .form-group > label {
@@ -86,12 +84,10 @@ main {
 }
 
 .error--text {
-	position: absolute;
 	color: var(--light-red);
-	bottom: -1.4rem;
-	left: 3px;
 	font-size: 0.7rem;
 	font-style: italic;
+	margin-top: 0.2rem;
 }
 .divider {
 	width: 100%;
@@ -139,5 +135,8 @@ main {
 	}
 	.divider > button {
 		margin-right: 0;
+	}
+	.form {
+		max-width: 400px;
 	}
 }
