--- a/Junior/NotificationsPage/src/index.css
+++ b/Junior/NotificationsPage/src/index.css
@@ -36,6 +36,8 @@
 body {
     font-family: var(--font-family);
     display: flex;
+    flex-direction: column;
+
     align-items: center;
     justify-content: center;
     background-color: hsla(var(--very-light-grayish-blue));
