--- a/Junior/IntroSectionWithDropdownNavigation/output.css
+++ b/Junior/IntroSectionWithDropdownNavigation/output.css
@@ -18,7 +18,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: currentColor;
+  border-color: #e5e7eb;
   /* 2 */
 }
 
@@ -536,49 +536,85 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed{
-  position: fixed;
+body{
+  font-family: Epilogue, sans-serif;
 }
 
-.bottom-0{
-  bottom: 0px;
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
-.left-0{
-  left: 0px;
+.mt-\[41px\]{
+  margin-top: 41px;
 }
 
-.top-0{
-  top: 0px;
+.mt-\[11px\]{
+  margin-top: 11px;
 }
 
-.right-0{
-  right: 0px;
+.mt-\[10px\]{
+  margin-top: 10px;
 }
 
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
+.mt-\[20px\]{
+  margin-top: 20px;
 }
 
 .flex{
   display: flex;
 }
 
-.hidden{
-  display: none;
+.grid{
+  display: grid;
 }
 
-.flex-row{
-  flex-direction: row;
+.w-full{
+  width: 100%;
 }
 
-.flex-col{
-  flex-direction: column;
+.w-\[82px\]{
+  width: 82px;
+}
+
+.w-screen{
+  width: 100vw;
+}
+
+.w-\[80px\]{
+  width: 80px;
+}
+
+.w-\[60px\]{
+  width: 60px;
+}
+
+.w-\[70px\]{
+  width: 70px;
+}
+
+.w-\[84px\]{
+  width: 84px;
+}
+
+.w-\[56px\]{
+  width: 56px;
+}
+
+.w-\[76px\]{
+  width: 76px;
+}
+
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-1{
+  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .items-center{
@@ -589,27 +625,17 @@ video {
   justify-content: space-between;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
+.justify-evenly{
+  justify-content: space-evenly;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
+.rounded-\[16px\]{
+  border-radius: 16px;
 }
 
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: hsl(0 0% 98% / var(--tw-bg-opacity));
-}
-
-.bg-black{
+.bg-almost-black{
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 8% / var(--tw-bg-opacity));
-}
-
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .p-4{
@@ -620,33 +646,42 @@ video {
   padding: 0.5rem;
 }
 
-.p-6{
-  padding: 1.5rem;
-}
-
-.px-6{
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-\[10px\]{
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.py-\[12px\]{
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.px-\[22px\]{
+  padding-left: 22px;
+  padding-right: 22px;
+}
+
+.pb-\[7px\]{
+  padding-bottom: 7px;
+}
+
+.pt-8{
+  padding-top: 2rem;
 }
 
 .text-center{
@@ -657,14 +692,9 @@ video {
   font-family: Epilogue, sans-serif;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-4xl{
@@ -672,21 +702,56 @@ video {
   line-height: 2.5rem;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-\[2rem\]{
+  font-size: 2rem;
+}
+
+.text-\[3rem\]{
+  font-size: 3rem;
+}
+
+.text-\[30px\]{
+  font-size: 30px;
+}
+
+.text-\[40px\]{
+  font-size: 40px;
+}
+
+.text-\[38px\]{
+  font-size: 38px;
+}
+
+.text-\[35px\]{
+  font-size: 35px;
+}
+
+.text-\[18px\]{
+  font-size: 18px;
+}
+
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .font-bold{
   font-weight: 700;
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 98% / var(--tw-text-opacity));
+.font-medium{
+  font-weight: 500;
 }
 
-.text-gray{
+.leading-\[26px\]{
+  line-height: 26px;
+}
+
+.text-medium-gray{
   --tw-text-opacity: 1;
   color: hsl(0 0% 41% / var(--tw-text-opacity));
+}
+
+.text-almost-white{
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 98% / var(--tw-text-opacity));
 }
