--- a/Junior/IntroSectionWithDropdownNavigation/output.css
+++ b/Junior/IntroSectionWithDropdownNavigation/output.css
@@ -540,81 +540,234 @@ body{
   font-family: Epilogue, sans-serif;
 }
 
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+.fixed{
+  position: fixed;
 }
 
-.mt-\[41px\]{
-  margin-top: 41px;
+.absolute{
+  position: absolute;
+}
+
+.-bottom-1{
+  bottom: -0.25rem;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.right-0{
+  right: 0px;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.my-\[2px\]{
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+.my-\[3px\]{
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.my-\[48px\]{
+  margin-top: 48px;
+  margin-bottom: 48px;
+}
+
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.ml-6{
+  margin-left: 1.5rem;
+}
+
+.ml-\[14px\]{
+  margin-left: 14px;
+}
+
+.ml-\[3px\]{
+  margin-left: 3px;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
+.mr-5{
+  margin-right: 1.25rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .mt-\[11px\]{
   margin-top: 11px;
 }
 
-.mt-\[10px\]{
-  margin-top: 10px;
+.mt-\[13px\]{
+  margin-top: 13px;
 }
 
-.mt-\[20px\]{
-  margin-top: 20px;
+.mt-\[41px\]{
+  margin-top: 41px;
+}
+
+.ml-\[12px\]{
+  margin-left: 12px;
+}
+
+.ml-\[13px\]{
+  margin-left: 13px;
+}
+
+.ml-\[15px\]{
+  margin-left: 15px;
+}
+
+.ml-3{
+  margin-left: 0.75rem;
+}
+
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mr-\[10px\]{
+  margin-right: 10px;
+}
+
+.mr-\[12px\]{
+  margin-right: 12px;
+}
+
+.mr-\[16px\]{
+  margin-right: 16px;
+}
+
+.mr-\[13px\]{
+  margin-right: 13px;
+}
+
+.mr-\[15px\]{
+  margin-right: 15px;
+}
+
+.block{
+  display: block;
 }
 
 .flex{
   display: flex;
 }
 
-.grid{
-  display: grid;
+.hidden{
+  display: none;
 }
 
-.w-full{
-  width: 100%;
+.h-auto{
+  height: auto;
 }
 
-.w-\[82px\]{
-  width: 82px;
+.w-\[240px\]{
+  width: 240px;
 }
 
-.w-screen{
-  width: 100vw;
-}
-
-.w-\[80px\]{
-  width: 80px;
+.w-\[54px\]{
+  width: 54px;
 }
 
 .w-\[60px\]{
   width: 60px;
 }
 
-.w-\[70px\]{
-  width: 70px;
+.w-\[64px\]{
+  width: 64px;
 }
 
-.w-\[84px\]{
-  width: 84px;
+.w-\[82px\]{
+  width: 82px;
 }
 
-.w-\[56px\]{
-  width: 56px;
+.w-full{
+  width: 100%;
 }
 
-.w-\[76px\]{
-  width: 76px;
+.w-44{
+  width: 11rem;
 }
 
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.w-\[10px\]{
+  width: 10px;
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.w-\[20px\]{
+  width: 20px;
 }
 
-.grid-rows-1{
-  grid-template-rows: repeat(1, minmax(0, 1fr));
+.w-\[18px\]{
+  width: 18px;
+}
+
+.w-\[17px\]{
+  width: 17px;
+}
+
+.w-\[21px\]{
+  width: 21px;
+}
+
+.translate-x-0{
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-full{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-0{
+  --tw-translate-y: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-full{
+  --tw-translate-y: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-0{
+  --tw-translate-y: -0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.flex-col{
+  flex-direction: column;
 }
 
 .items-center{
@@ -625,12 +778,36 @@ body{
   justify-content: space-between;
 }
 
-.justify-evenly{
-  justify-content: space-evenly;
+.divide-y > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
+.divide-gray-100 > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-divide-opacity));
+}
+
+.rounded-\[12px\]{
+  border-radius: 12px;
 }
 
 .rounded-\[16px\]{
   border-radius: 16px;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-almost-black{
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 8% / var(--tw-border-opacity));
 }
 
 .bg-almost-black{
@@ -638,12 +815,18 @@ body{
   background-color: hsl(0 0% 8% / var(--tw-bg-opacity));
 }
 
-.p-4{
-  padding: 1rem;
+.bg-almost-black\/\[0\.75\]{
+  background-color: hsl(0 0% 8% / 0.75);
 }
 
-.p-2{
-  padding: 0.5rem;
+.bg-almost-white{
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 98% / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .px-4{
@@ -651,24 +834,14 @@ body{
   padding-right: 1rem;
 }
 
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .px-\[10px\]{
   padding-left: 10px;
   padding-right: 10px;
 }
 
-.py-\[12px\]{
-  padding-top: 12px;
-  padding-bottom: 12px;
+.px-\[16px\]{
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .px-\[22px\]{
@@ -676,62 +849,122 @@ body{
   padding-right: 22px;
 }
 
+.px-\[67px\]{
+  padding-left: 67px;
+  padding-right: 67px;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-\[12px\]{
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.py-\[8px\]{
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.py-\[9px\]{
+  padding-top: 9px;
+  padding-bottom: 9px;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.py-\[7px\]{
+  padding-top: 7px;
+  padding-bottom: 7px;
+}
+
 .pb-\[7px\]{
   padding-bottom: 7px;
 }
 
-.pt-8{
-  padding-top: 2rem;
+.pl-\[24px\]{
+  padding-left: 24px;
+}
+
+.pt-\[25px\]{
+  padding-top: 25px;
+}
+
+.pt-\[18px\]{
+  padding-top: 18px;
+}
+
+.pl-\[23px\]{
+  padding-left: 23px;
+}
+
+.pl-\[25px\]{
+  padding-left: 25px;
+}
+
+.pt-\[17px\]{
+  padding-top: 17px;
+}
+
+.pt-\[7px\]{
+  padding-top: 7px;
+}
+
+.pl-\[1px\]{
+  padding-left: 1px;
+}
+
+.pl-\[2px\]{
+  padding-left: 2px;
+}
+
+.pt-\[15px\]{
+  padding-top: 15px;
+}
+
+.pt-\[14px\]{
+  padding-top: 14px;
+}
+
+.pt-\[12px\]{
+  padding-top: 12px;
 }
 
 .text-center{
   text-align: center;
 }
 
-.font-epilogue{
-  font-family: Epilogue, sans-serif;
+.text-\[14px\]{
+  font-size: 14px;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-\[2rem\]{
-  font-size: 2rem;
-}
-
-.text-\[3rem\]{
-  font-size: 3rem;
-}
-
-.text-\[30px\]{
-  font-size: 30px;
-}
-
-.text-\[40px\]{
-  font-size: 40px;
-}
-
-.text-\[38px\]{
-  font-size: 38px;
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .text-\[35px\]{
   font-size: 35px;
 }
 
-.text-\[18px\]{
-  font-size: 18px;
-}
-
-.text-\[16px\]{
-  font-size: 16px;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold{
@@ -742,8 +975,17 @@ body{
   font-weight: 500;
 }
 
+.font-normal{
+  font-weight: 400;
+}
+
 .leading-\[26px\]{
   line-height: 26px;
+}
+
+.text-almost-white{
+  --tw-text-opacity: 1;
+  color: hsl(0 0% 98% / var(--tw-text-opacity));
 }
 
 .text-medium-gray{
@@ -751,7 +993,61 @@ body{
   color: hsl(0 0% 41% / var(--tw-text-opacity));
 }
 
-.text-almost-white{
+.text-gray-700{
   --tw-text-opacity: 1;
-  color: hsl(0 0% 98% / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
+
+.opacity-0{
+  opacity: 0;
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-100{
+  transition-duration: 100ms;
+}
+
+.hover\:bg-gray-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+@media (prefers-color-scheme: dark){
+  .dark\:divide-gray-600 > :not([hidden]) ~ :not([hidden]){
+    --tw-divide-opacity: 1;
+    border-color: rgb(75 85 99 / var(--tw-divide-opacity));
+  }
+
+  .dark\:bg-gray-700{
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  }
+
+  .dark\:text-gray-400{
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:bg-gray-600:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:text-white:hover{
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+}
+
+
