--- a/Junior/IntroSectionWithDropdownNavigation/output.css
+++ b/Junior/IntroSectionWithDropdownNavigation/output.css
@@ -540,6 +540,101 @@ body{
   font-family: Epilogue, sans-serif;
 }
 
+header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  .toggle-menu{
+    padding-bottom: 7px;
+  }
+}
+
+main{
+  width: 100%;
+  .title{
+    margin-top: 41px;
+  }
+  .title{
+    font-size: 35px;
+  }
+  .title{
+    font-weight: 700;
+  }
+  .text{
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+  .text{
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .text{
+    font-size: 16px;
+  }
+  .text{
+    font-weight: 500;
+  }
+  .text{
+    line-height: 26px;
+  }
+  .text{
+    --tw-text-opacity: 1;
+    color: hsl(0 0% 41% / var(--tw-text-opacity));
+  }
+  .learn-more{
+    margin-top: 11px;
+  }
+  .learn-more{
+    border-radius: 16px;
+  }
+  .learn-more{
+    --tw-bg-opacity: 1;
+    background-color: hsl(0 0% 8% / var(--tw-bg-opacity));
+  }
+  .learn-more{
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
+  .learn-more{
+    padding-left: 22px;
+    padding-right: 22px;
+  }
+  .learn-more{
+    font-size: 16px;
+  }
+  .learn-more{
+    font-weight: 700;
+  }
+  .learn-more{
+    --tw-text-opacity: 1;
+    color: hsl(0 0% 98% / var(--tw-text-opacity));
+  }
+  .clients{
+    margin-top: 48px;
+    margin-bottom: 48px;
+  }
+  .clients{
+    display: flex;
+  }
+  .clients{
+    width: 100%;
+  }
+  .clients{
+    align-items: center;
+  }
+  .clients{
+    justify-content: space-between;
+  }
+  .clients{
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
 .fixed{
   position: fixed;
 }
@@ -564,10 +659,6 @@ body{
   top: 0px;
 }
 
-.z-10{
-  z-index: 10;
-}
-
 .my-\[2px\]{
   margin-top: 2px;
   margin-bottom: 2px;
@@ -578,27 +669,12 @@ body{
   margin-bottom: 3px;
 }
 
-.my-\[48px\]{
-  margin-top: 48px;
-  margin-bottom: 48px;
-}
-
-.my-6{
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.my-3{
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
 .ml-6{
   margin-left: 1.5rem;
 }
 
-.ml-\[14px\]{
-  margin-left: 14px;
+.ml-\[15px\]{
+  margin-left: 15px;
 }
 
 .ml-\[3px\]{
@@ -613,60 +689,8 @@ body{
   margin-right: 1.25rem;
 }
 
-.mt-5{
-  margin-top: 1.25rem;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
-}
-
-.mt-\[11px\]{
-  margin-top: 11px;
-}
-
-.mt-\[13px\]{
-  margin-top: 13px;
-}
-
-.mt-\[41px\]{
-  margin-top: 41px;
-}
-
-.ml-\[12px\]{
-  margin-left: 12px;
-}
-
-.ml-\[13px\]{
-  margin-left: 13px;
-}
-
-.ml-\[15px\]{
-  margin-left: 15px;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
-}
-
-.ml-5{
-  margin-left: 1.25rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mr-\[10px\]{
-  margin-right: 10px;
-}
-
 .mr-\[12px\]{
   margin-right: 12px;
-}
-
-.mr-\[16px\]{
-  margin-right: 16px;
 }
 
 .mr-\[13px\]{
@@ -677,8 +701,20 @@ body{
   margin-right: 15px;
 }
 
-.block{
-  display: block;
+.mr-\[16px\]{
+  margin-right: 16px;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
+}
+
+.mt-\[13px\]{
+  margin-top: 13px;
 }
 
 .flex{
@@ -689,8 +725,12 @@ body{
   display: none;
 }
 
-.h-auto{
-  height: auto;
+.w-\[17px\]{
+  width: 17px;
+}
+
+.w-\[20px\]{
+  width: 20px;
 }
 
 .w-\[240px\]{
@@ -713,34 +753,6 @@ body{
   width: 82px;
 }
 
-.w-full{
-  width: 100%;
-}
-
-.w-44{
-  width: 11rem;
-}
-
-.w-\[10px\]{
-  width: 10px;
-}
-
-.w-\[20px\]{
-  width: 20px;
-}
-
-.w-\[18px\]{
-  width: 18px;
-}
-
-.w-\[17px\]{
-  width: 17px;
-}
-
-.w-\[21px\]{
-  width: 21px;
-}
-
 .translate-x-0{
   --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -748,21 +760,6 @@ body{
 
 .translate-x-full{
   --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-0{
-  --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-full{
-  --tw-translate-y: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-0{
-  --tw-translate-y: -0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -774,31 +771,8 @@ body{
   align-items: center;
 }
 
-.justify-between{
-  justify-content: space-between;
-}
-
-.divide-y > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-}
-
-.divide-gray-100 > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-divide-opacity));
-}
-
 .rounded-\[12px\]{
   border-radius: 12px;
-}
-
-.rounded-\[16px\]{
-  border-radius: 16px;
-}
-
-.rounded-lg{
-  border-radius: 0.5rem;
 }
 
 .border{
@@ -810,11 +784,6 @@ body{
   border-color: hsl(0 0% 8% / var(--tw-border-opacity));
 }
 
-.bg-almost-black{
-  --tw-bg-opacity: 1;
-  background-color: hsl(0 0% 8% / var(--tw-bg-opacity));
-}
-
 .bg-almost-black\/\[0\.75\]{
   background-color: hsl(0 0% 8% / 0.75);
 }
@@ -824,44 +793,9 @@ body{
   background-color: hsl(0 0% 98% / var(--tw-bg-opacity));
 }
 
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.px-\[10px\]{
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.px-\[16px\]{
-  padding-left: 16px;
-  padding-right: 16px;
-}
-
-.px-\[22px\]{
-  padding-left: 22px;
-  padding-right: 22px;
-}
-
 .px-\[67px\]{
   padding-left: 67px;
   padding-right: 67px;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-\[12px\]{
-  padding-top: 12px;
-  padding-bottom: 12px;
 }
 
 .py-\[8px\]{
@@ -874,76 +808,28 @@ body{
   padding-bottom: 9px;
 }
 
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-\[10px\]{
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.py-\[7px\]{
-  padding-top: 7px;
-  padding-bottom: 7px;
-}
-
-.pb-\[7px\]{
-  padding-bottom: 7px;
-}
-
-.pl-\[24px\]{
-  padding-left: 24px;
-}
-
-.pt-\[25px\]{
-  padding-top: 25px;
-}
-
-.pt-\[18px\]{
-  padding-top: 18px;
+.pl-\[1px\]{
+  padding-left: 1px;
 }
 
 .pl-\[23px\]{
   padding-left: 23px;
 }
 
-.pl-\[25px\]{
-  padding-left: 25px;
-}
-
-.pt-\[17px\]{
-  padding-top: 17px;
-}
-
-.pt-\[7px\]{
-  padding-top: 7px;
-}
-
-.pl-\[1px\]{
-  padding-left: 1px;
+.pl-\[24px\]{
+  padding-left: 24px;
 }
 
 .pl-\[2px\]{
   padding-left: 2px;
 }
 
-.pt-\[15px\]{
-  padding-top: 15px;
-}
-
-.pt-\[14px\]{
-  padding-top: 14px;
-}
-
 .pt-\[12px\]{
   padding-top: 12px;
+}
+
+.pt-\[18px\]{
+  padding-top: 18px;
 }
 
 .text-center{
@@ -954,100 +840,111 @@ body{
   font-size: 14px;
 }
 
-.text-\[16px\]{
-  font-size: 16px;
-}
-
-.text-\[35px\]{
-  font-size: 35px;
-}
-
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.font-bold{
-  font-weight: 700;
-}
-
-.font-medium{
-  font-weight: 500;
-}
-
-.font-normal{
-  font-weight: 400;
-}
-
-.leading-\[26px\]{
-  line-height: 26px;
-}
-
-.text-almost-white{
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 98% / var(--tw-text-opacity));
-}
-
-.text-medium-gray{
-  --tw-text-opacity: 1;
-  color: hsl(0 0% 41% / var(--tw-text-opacity));
-}
-
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.opacity-0{
-  opacity: 0;
-}
-
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .transition-all{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
-.duration-100{
-  transition-duration: 100ms;
+@media (min-width: 640px) {
+  .toggle-menu{
+    display: none;
+  }
+
+  .menu-mobile{
+    display: none;
+  }
+
+  main{
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 119px;
+    padding-top: 56px;
+    padding-bottom: 56px;
+    padding-left: 130px;
+    padding-right: 130px;
+    .hero{
+      width: 480px;
+    }
+    .content{
+      padding-left: 35px;
+      padding-right: 35px;
+    }
+    .content{
+      padding-top: 62px;
+    }
+    .title{
+      font-size: 78px;
+    }
+    .title{
+      line-height: 80px;
+    }
+    .text{
+      margin-top: 38px;
+    }
+    .text{
+      max-width: 430px;
+    }
+    .text{
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+    .text{
+      line-height: 27px;
+    }
+    .text{
+      letter-spacing: 1px;
+    }
+    .learn-more{
+      margin-top: 40px;
+    }
+    .learn-more{
+      padding-left: 33px;
+      padding-right: 33px;
+    }
+    .learn-more{
+      padding-top: 18px;
+    }
+    .learn-more{
+      padding-bottom: 12px;
+    }
+    .learn-more{
+      font-size: 17px;
+    }
+    .clients{
+      margin-top: 112px;
+    }
+    .clients{
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+  }
+
+  .sm\:block{
+    display: block;
+  }
+
+  .sm\:w-\[114px\]{
+    width: 114px;
+  }
+
+  .sm\:w-\[60px\]{
+    width: 60px;
+  }
+
+  .sm\:w-\[66px\]{
+    width: 66px;
+  }
+
+  .sm\:w-\[72px\]{
+    width: 72px;
+  }
+
+  .sm\:w-\[90px\]{
+    width: 90px;
+  }
+
+  .sm\:text-left{
+    text-align: left;
+  }
 }
-
-.hover\:bg-gray-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-@media (prefers-color-scheme: dark){
-  .dark\:divide-gray-600 > :not([hidden]) ~ :not([hidden]){
-    --tw-divide-opacity: 1;
-    border-color: rgb(75 85 99 / var(--tw-divide-opacity));
-  }
-
-  .dark\:bg-gray-700{
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-gray-400{
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity));
-  }
-
-  .dark\:hover\:bg-gray-600:hover{
-    --tw-bg-opacity: 1;
-    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-  }
-
-  .dark\:hover\:text-white:hover{
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-}
-
-
