--- a/Junior/IntroSectionWithDropdownNavigation/output.css
+++ b/Junior/IntroSectionWithDropdownNavigation/output.css
@@ -643,6 +643,10 @@ main{
   position: absolute;
 }
 
+.relative{
+  position: relative;
+}
+
 .-bottom-1{
   bottom: -0.25rem;
 }
@@ -657,6 +661,18 @@ main{
 
 .top-0{
   top: 0px;
+}
+
+.top-\[10px\]{
+  top: 10px;
+}
+
+.top-\[39px\]{
+  top: 39px;
+}
+
+.right-\[1px\]{
+  right: 1px;
 }
 
 .my-\[2px\]{
@@ -781,6 +797,18 @@ main{
   width: 100%;
 }
 
+.w-\[200px\]{
+  width: 200px;
+}
+
+.w-\[154px\]{
+  width: 154px;
+}
+
+.w-\[153px\]{
+  width: 153px;
+}
+
 .translate-x-0{
   --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -807,6 +835,10 @@ main{
   border-radius: 12px;
 }
 
+.rounded-\[10px\]{
+  border-radius: 10px;
+}
+
 .border{
   border-width: 1px;
 }
@@ -823,6 +855,11 @@ main{
 .bg-almost-white{
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 98% / var(--tw-bg-opacity));
+}
+
+.bg-red-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
 .px-\[21px\]{
@@ -843,6 +880,11 @@ main{
 .py-\[9px\]{
   padding-top: 9px;
   padding-bottom: 9px;
+}
+
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .pl-\[1px\]{
@@ -869,12 +911,26 @@ main{
   padding-top: 18px;
 }
 
+.pl-\[21px\]{
+  padding-left: 21px;
+}
+
+.pt-\[11px\]{
+  padding-top: 11px;
+}
+
 .text-center{
   text-align: center;
 }
 
 .text-\[14px\]{
   font-size: 14px;
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .transition-all{
@@ -963,6 +1019,10 @@ main{
       padding-left: 0px;
       padding-right: 0px;
     }
+  }
+
+  .shadow {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
   }
 
   .sm\:block{
